Fixes layout bug in #sitewide-alert.
There was a situation where #sitewide-alert was not expanding to fill the space it was in. This update ensures that it does.

--- a/sass/modules/_boxes.scss
+++ b/sass/modules/_boxes.scss
@@ -90,8 +90,11 @@ p.alert{
 	background-color: $highlight;
 	border-radius: 0;
 }
-#sitewide-alert{  // deprecated
+#sitewide-alert{
+	// box model
 	border-radius: 0;
+	width: 100%;
+	// animations and transitions
 	transition: all .5s ease-in;
 }
 
